--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="innermain" id="main">
     </div>
     <div class="footer">
-        <p>© Copyright 2014 by isnowfy, Designed by isnowfy</p>
+        <p>© Edwardhust @ <a href="https://github.com/">GitHub</a>; <a href="https://edwardhust.github.io/simple">Login</a></p>
     </div>
 </div>
 <script src="main.js"></script>
